using  javassist Dynamic Pojo Class created successfully.